# app-cli

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: devskim.yml  on-push.yml  on-tag.yml  rust-clippy.yml
src/: composegenerator.rs  github.rs  gitlab.rs  hosted_git.rs  lib.rs  main.rs  updates.rs  utils.rs
src/composegenerator/: permissions.rs  types.rs  utils.rs
src/composegenerator/compose/: types.rs
src/composegenerator/output/: types.rs
src/composegenerator/umbrel/: convert.rs  mod.rs  types.rs
src/composegenerator/v3/: convert.rs  mod.rs  types.rs  update.rs
src/composegenerator/v4/: convert.rs  mod.rs  permissions.rs  types.rs  update.rs  utils.rs
