[package]
name = "citadel-apps"
description = "Handle Citadel app.yml files"
license = "AGPL-3.0-or-later"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
log = "0.4"
# Optional dependencies
schemars = { version = "0.8", optional = true }
# Only used by the CLI
env_logger = { version = "0.9", optional = true }
clap = { version = "3.2", features = ["derive"], optional = true }
tera = { version = "1", default-features = false, optional = true }
dotenv = "0.15.0"
hex = "0.4.3"
hmac-sha256 = "1.1.4"
stringreader = "0.1.1"

[profile.release]
strip = true
lto = true


[[bin]]
name = "app-cli"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:env_logger"]
umbrel = []
dev-tools = ["umbrel", "schema"]
schema = ["dep:schemars"]
preprocess = ["dep:tera"]

[dev-dependencies]
pretty_assertions = "1.3.0"
