[package]
name = "citadel-apps"
description = "Handle Citadel app.yml files"
license = "AGPL-3.0-or-later"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/runcitadel/app-cli"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
log = "0.4"
hex = "0.4.3"
hmac-sha256 = "1.1.5"
# Optional dependencies
schemars = { version = "0.8", optional = true }
tokio  = { version = "1.22.0", optional = true, features = ["full"] }
bollard = { version = "0.13.0", optional = true }
futures-util = { version = "0.3.25", optional = true }
octocrab = { version = "0.17.0", optional = true }
semver = { version = "1.0.14", optional = true }
gitlab = { version = "0.1505.0", optional = true }
url = { version = "2.3.0", optional = true }
# Only used by the CLI
env_logger = { version = "0.9", optional = true }
clap = { version = "3.2", features = ["derive"], optional = true }
tera = { version = "1", default-features = false, optional = true }
dotenv = { version = "0.15.0", optional = true }

[profile.release]
strip = true
lto = true


[[bin]]
name = "app-cli"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:env_logger", "dep:tokio", "dep:dotenv"]
umbrel = []
dev-tools = ["umbrel", "schema", "docker", "dep:octocrab", "dep:semver", "dep:gitlab", "dep:url"]
schema = ["dep:schemars"]
preprocess = ["dep:tera"]
docker = ["dep:bollard", "dep:futures-util"]

[dev-dependencies]
pretty_assertions = "1.3.0"
